web/book/tests/snapshots/snapshot__syntax__expressions-and-operators-3.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\nderive other_distance = (sum distance)\n"
---
SELECT
  *,
  SUM(distance) OVER () AS other_distance
FROM
  employees

