web/book/tests/snapshots/snapshot__syntax__numbers-0.snap
---
source: web/book/tests/snapshot.rs
expression: "from numbers\nselect [\n    small = 1.000_000_1,\n    big = 5_000_000,\n]\n"
---
SELECT
  1.0000001 AS small,
  5000000 AS big
FROM
  numbers

