web/book/tests/snapshots/snapshot__syntax__quoted-identifiers-4.snap
---
source: web/book/tests/snapshot.rs
expression: "from `music.albums`\n"
---
SELECT
  *
FROM
  music.albums

